<resources>
    <string name="app_name">RecyclerViewExercise</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="workshop_android">Workshop Android</string>
    <string name="nama">Nama</string>
    <string name="jurusan">Jurusan</string>
    <string name="teknik_informatika">Teknik Informatika</string>
    <string name="angkatan">Angkatan</string>
    <string name="year">2015</string>
    <string name="alamat">Alamat</string>
    <string name="ponorogo">Ponorogo</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="_083854050592">083854050592</string>
    <string name="input_data">Input Data</string>
    <string name="simpan">Simpan</string>
</resources>
